Update: Fixed font sizes/spacing...

--- a/public/css/stats.css
+++ b/public/css/stats.css
@@ -509,6 +509,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 90px;
   gap: 2px;
 }
@@ -520,7 +521,7 @@ nav {
 }
 
 .date, .length {
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 500;
   color: var(--text-4);
 }
@@ -529,12 +530,12 @@ nav {
   display: flex;
   align-items: center;
   gap: 4px;
-  margin: 4px 0;
+  margin: 4px 0; 
 }
 
 .lpText {
   color: white;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 700;
 }
 
@@ -596,13 +597,15 @@ nav {
 }
 
 .userStats {
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 700;
   color: white;
+  line-height: 17px;
 }
 
 .userStats .deaths {
   color: #ff4e50;
+  font-size: 14px;
 }
 
 .userStats .slash {
@@ -611,8 +614,8 @@ nav {
 }
 
 .additionalStats {
-  font-size: 12px;
-  font-weight: 600;
+  font-size: 11px;
+  font-weight: 700;
 }
 
 .actuallKDA {
